[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde_yaml = "0.9.13"
ggez = "0.8.1"
dyn-clone = "1.0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2"
fastrand = "1.8.0"
chrono = "0.4.23"
tempfile = "3.3.0"

[build-dependencies]
fs_extra = "1.2.0"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
panic = "abort"