[package]
name = "game"
version = "0.7.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git="https://github.com/ggez/ggez", branch="devel" }
serde = "1.0.145"
serde_yaml = "0.9.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
fastrand = "1.8.0"
chrono = "0.4.23"

[build-dependencies]
fs_extra = "1.2.0"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
panic = "abort"