[package]
name = "game"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = {version = "1.0.145", features = ["derive"]}
serde_yaml = "0.9.13"
good-web-game = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
fastrand = "1.8.0"
chrono = "0.4.23"

[build-dependencies]
fs_extra = "1.2.0"

[profile.dev]
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
panic = "abort"